neon database setup

--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ OPEN_AI_KEY=
 
 NEXT_PUBLIC_UPLOAD_CARE_PUBLIC_KEY=
 UPLOAD_CARE_SECRET_KEY=
-DATABASE_URL=""
+DATABASE_URL="postgresql://pythagore_owner:BSLo4H7FVuer@ep-floral-meadow-a5ql4zj8.us-east-2.aws.neon.tech/chatbotai?sslmode=require"
 
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_c2V0LXVyY2hpbi04Mi5jbGVyay5hY2NvdW50cy5kZXYk
 CLERK_SECRET_KEY=sk_test_rTcjWDrZv3fMFVwxhe7WIIAZmJQjq3Pjw3LuDRt7SI
